# CASM

./: CMakeLists.txt  README.md  add.wasm  copypaster.txt  main.c
examples/wasm_examples/: add.wasm  add.wat
includes/casm/: CMakeLists.txt  COMMON_INCLUDE.h  casm.c  casm.h
includes/casm/data_types/: wasm_data.h  wasm_proto_vector.h
includes/casm/data_types/sections/: wasm_section_code_data.h  wasm_section_function_data.h  wasm_section_type_data.h
includes/casm/definitions/: PLATFORM_ABSTRACT.h  STATUS_CODES.h  WASM_OP_CODES.h
includes/casm/parser/: parser.c  parser.h
includes/casm/parser/sections/: wasm_section_code_pars.h  wasm_section_functions_pars.h  wasm_section_type_pars.h
